nikio/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: nikio
  name: nikio
spec:
  replicas: 1
  selector:
    deploymentconfig: nikio
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nikio
        deploymentconfig: nikio
    spec:
      containers:
        - imagePullPolicy: Always
          name: nikio
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - nikio
        from:
          kind: ImageStreamTag
          name: 'nikio:production'
          namespace: build
      type: ImageChange
    - type: ConfigChange
